--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "sunnysideup/sectionizer",
     "type": "silverstripe-module",
     "description": "uses Javascript to section up content by H3 headings",
-
     "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
     "authors": [
         {
@@ -12,9 +11,15 @@
         }
     ],
     "require": {
-        "silverstripe/framework": "~2.4"
+        "silverstripe/framework": "~2.4",
+        "silverstripe/cms": "~2.4"
     },
     "extra": {
         "installer-name": "sectionizer"
-    }
+    },
+    "keywords": [
+        "Silverstripe-CMS",
+        "CMS",
+        "Silverstripe"
+    ]
 }
