--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sunnysideup/sectionizer",
     "type": "silverstripe-module",
     "description": "uses Javascript to section up content by H3 headings",
-    "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
+    "license": "BSD-3-Clause",
     "authors": [
         {
             "name": "Nicolaas Francken",
